# Signed-Circular-Edge-Coloring

./: .gitignore  README.md  pyproject.toml  setup.py
configs/: decide.sample.json  optimize.sample.json
data/instances/: cycle_c4_one_negative.json  single_positive_edge.json  star_k1_3_positive.json
docs/: model.md  workflow.md
results/figures/: README.md
results/notes/: README.md
results/tables/: README.md
scripts/: run_signedcoloring.py
src/signedcoloring/: __init__.py  _classification_native.cpp  artifacts.py  classification.py  classification_native.py  cli.py  io.py  models.py  rational.py  solver.py  verify.py  visualization.py
tests/: test_classification.py  test_cli.py  test_io.py  test_solver.py
