[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signedcoloring"
version = "0.1.0"
description = "Exact solvers and experiment scaffolding for signed-graph circular edge coloring."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.3",
    "z3-solver>=4.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[project.scripts]
signedcoloring = "signedcoloring.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
